# glcm.cuda

./: .gitignore  .gitmodules  CMakeLists.txt  DICOMReader.cpp  DICOMReader.h  README.md  benchmark_times.csv  benchmark_times_dicom_python.csv  benchmark_times_png_python.csv  copy_files.py  features.cpp  features.cu  features.h  file.cpp  file.h  glcm.cpp  glcm.h  glcm_gpu.cu  glcm_gpu.h  image.cpp  image.h  main.cpp  main.cu  main_cpu.cpp  plot_graph.py  plot_graph_gpu.py  plot_total.py  requirements.txt  total_cpu.csv  total_gpu.csv  total_gpu_omp.csv  total_gpu_omp_cuda_only.csv  total_gpu_png.csv  total_gpu_png_omp.csv
benchmark/: README.md  glcm_cuda.py  glcm_py.py  requirements.txt
data/result/: sample512_gray_result.txt  sample512_graygpu_result.txt  sample512_result.txt  sample512gpu_result.txt
dataset/ST000001/SE000002/: IM000051.dcm  IM000052.dcm  IM000053.dcm  IM000054.dcm  IM000055.dcm  IM000056.dcm  IM000057.dcm  IM000058.dcm  IM000059.dcm  IM000060.dcm  IM000061.dcm  IM000062.dcm  IM000063.dcm  IM000064.dcm  IM000065.dcm  IM000066.dcm  IM000067.dcm  IM000068.dcm  IM000069.dcm  IM000070.dcm  IM000071.dcm  IM000072.dcm  IM000073.dcm  IM000074.dcm  IM000075.dcm  IM000076.dcm  IM000077.dcm  IM000078.dcm  IM000079.dcm  IM000080.dcm  IM000081.dcm  IM000082.dcm  IM000083.dcm  IM000084.dcm  IM000085.dcm  IM000086.dcm  IM000087.dcm  IM000088.dcm  IM000089.dcm  IM000090.dcm  (+35 more)
dataset/ST000001/SE000004/: IM000001.dcm  IM000002.dcm  IM000003.dcm  IM000004.dcm  IM000005.dcm  IM000006.dcm  IM000007.dcm  IM000008.dcm  IM000009.dcm  IM000010.dcm  IM000011.dcm  IM000012.dcm  IM000013.dcm  IM000014.dcm  IM000015.dcm  IM000016.dcm  IM000017.dcm  IM000018.dcm  IM000019.dcm  IM000020.dcm  IM000021.dcm  IM000022.dcm  IM000023.dcm  IM000024.dcm  IM000025.dcm  IM000026.dcm  IM000027.dcm
dataset/ST000001/SE000005/: IM000002.dcm  IM000003.dcm  IM000004.dcm  IM000005.dcm  IM000006.dcm  IM000007.dcm  IM000008.dcm  IM000009.dcm  IM000010.dcm  IM000011.dcm  IM000012.dcm  IM000013.dcm  IM000014.dcm  IM000015.dcm  IM000016.dcm  IM000017.dcm  IM000018.dcm  IM000019.dcm  IM000020.dcm  IM000021.dcm  IM000022.dcm  IM000023.dcm  IM000024.dcm  IM000025.dcm  IM000026.dcm  IM000027.dcm  IM000028.dcm  IM000029.dcm  IM000030.dcm  IM000031.dcm  IM000032.dcm  IM000033.dcm  IM000034.dcm  IM000035.dcm  IM000036.dcm
dataset/ST000001/SE000007/: IM000001.dcm  IM000002.dcm  IM0000033.dcm  IM000004.dcm  IM000005.dcm  IM000006.dcm  IM000007.dcm  IM000008.dcm  IM000009.dcm  IM0000103.dcm  IM000011.dcm  IM000013s.dcm  IM000014s.dcm  IM000015s.dcm  IM000016s.dcm  IM000017.dcm  IM000018s.dcm  IM000019.dcm  IM000020.dcm  IM000021.dcm  IM000022s.dcm  IM000023s.dcm  IM000024.dcm
example/: main_dicom_eg.cpp  normalization_glcm.cu
